# supla-arduino

./: .drone.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  _clang-format  library.properties  readme.md
extras/esp-idf/supla-device/: CMakeLists.txt  component.mk  supla_org_cert.pem
extras/examples/empty_freertos_linux_project/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
extras/examples/empty_linux_project/: CMakeLists.txt  main.cpp
extras/examples/freertos_linux/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
extras/examples/linux/: CMakeLists.txt  README.md  main.cpp  supla-device.yaml
extras/porting/linux/: CMakeLists.txt  IPAddress.cpp  IPAddress.h  WiFiClient.h  linux_file_state_logger.cpp  linux_file_state_logger.h  linux_log.c  linux_network.cpp  linux_network.h  linux_platform.cpp  linux_timers.cpp  linux_timers.h  linux_yaml_config.cpp  linux_yaml_config.h  network_client.cpp  network_client.h
extras/test/: CMakeLists.txt
extras/test/ActionTriggerTests/: action_trigger_tests.cpp
extras/test/ButtonTests/: button_tests.cpp  simple_button_tests.cpp
extras/test/ChannelElementTests/: channel_element_tests.cpp
extras/test/ChannelTests/: channel_extended_tests.cpp  channel_tests.cpp
extras/test/ConditionTests/: em_getter_tests.cpp  on_between_eq_tests.cpp  on_between_tests.cpp  on_equal_tests.cpp  on_greater_eq_tests.cpp  on_greater_tests.cpp  on_invalid_tests.cpp  on_less_eq_tests.cpp  on_less_tests.cpp  while_less_tests.cpp
extras/test/CorrectionTests/: correction_tests.cpp
extras/test/ElectricityMeterTests/: electricity_meter_tests.cpp
extras/test/ElementTests/: element_tests.cpp
extras/test/InternalPinOutputTests/: internal_pin_output_tests.cpp
extras/test/IoTests/: io_tests.cpp
extras/test/LocalActionTests/: local_action_tests.cpp
extras/test/PinStatusLedTests/: pin_status_led_tests.cpp
extras/test/RgbwDimmerTests/: dimmer_leds_tests.cpp  dimmer_tests.cpp  rgb_base_tests.cpp  rgb_leds_tests.cpp  rgbw_base_tests.cpp  rgbw_leds_test.cpp
extras/test/SensorTests/: thermometer_tests.cpp
extras/test/StorageTests/: key_value_tests.cpp
extras/test/SuplaDeviceTests/: supla_device_full_startup_tests.cpp  supla_device_tests.cpp
extras/test/ToolsTests/: tools_tests.cpp
extras/test/UptimeTests/: uptime_tests.cpp
extras/test/doubles/: Arduino.h  arduino_mock.cpp  arduino_mock.h  board_mock.cpp  board_mock.h  element_mock.h  log.cpp  srpc.cpp  srpc_mock.cpp  srpc_mock.h  timer_mock.cpp  timer_mock.h
src/: CMakeLists.txt  SuplaDevice.cpp  SuplaDevice.h  SuplaSomfy.cpp  SuplaSomfy.h  crc16.h
src/nettle/: README  bignum.c  bignum.h  gmp-glue.c  gmp-glue.h  macros.h  mini-gmp.c  mini-gmp.h  nettle-internal.h  nettle-meta.h  nettle-types.h  nettle-write.h  pkcs1-rsa-sha256.c  pkcs1.c  pkcs1.h  rsa-sha256-verify.c  rsa-verify.c  rsa.c  rsa.h  sha2.h  sha256-compress.c  sha256.c  write-be32.c
src/supla/: IEEE754tools.h  action_handler.cpp  action_handler.h  actions.h  arduino_plafrom.cpp  at_channel.cpp  at_channel.h  auto_lock.cpp  auto_lock.h  channel.cpp  channel.h  channel_element.cpp  channel_element.h  channel_extended.h  condition.cpp  condition.h  condition_getter.cpp  condition_getter.h  correction.cpp  correction.h  crc16.cpp  crc16.h  definitions.h  element.cpp  element.h  events.h  io.cpp  io.h  local_action.cpp  local_action.h  log_wrapper.cpp  mutex.cpp  mutex.h  rsa_verificator.cpp  rsa_verificator.h  sha256.cpp  sha256.h  status.cpp  supla_lib_config.h  time.cpp  (+9 more)
src/supla-common/: IEEE754tools.h  lck.c  log.c  log.h  proto.c  proto.h  srpc.c  srpc.h
src/supla/clock/: clock.cpp  clock.h
src/supla/conditions/: on_between.cpp  on_between_eq.cpp  on_equal.cpp  on_greater.cpp  on_greater_eq.cpp  on_invalid.cpp  on_less.cpp  on_less_eq.cpp  while_less.cpp
src/supla/control/: action_trigger.cpp  action_trigger.h  bistable_relay.cpp  bistable_relay.h  bistable_roller_shutter.cpp  bistable_roller_shutter.h  button.cpp  button.h  dimmer_base.cpp  dimmer_base.h  dimmer_leds.cpp  dimmer_leds.h  internal_pin_output.cpp  internal_pin_output.h  light_relay.cpp  light_relay.h  pin_status_led.cpp  pin_status_led.h  relay.cpp  relay.h  rgb_base.cpp  rgb_base.h  rgb_leds.cpp  rgb_leds.h  rgbw_base.cpp  rgbw_base.h  rgbw_leds.cpp  rgbw_leds.h  roller_shutter.cpp  roller_shutter.h  sequence_button.cpp  sequence_button.h  simple_button.cpp  simple_button.h  tripple_button_roller_shutter.cpp  tripple_button_roller_shutter.h  virtual_relay.cpp  virtual_relay.h
src/supla/device/: last_state_logger.cpp  last_state_logger.h  status_led.cpp  status_led.h  sw_update.cpp  sw_update.h
src/supla/network/: ENC28J60.h  esp32_wifi.h  esp32eth.h  esp_web_server.cpp  esp_web_server.h  esp_wifi.h  ethernet_shield.h  html_element.cpp  html_element.h  html_generator.cpp  html_generator.h  netif_wifi.cpp  netif_wifi.h  network.cpp  network.h  web_sender.cpp  web_sender.h  web_server.cpp  web_server.h  wt32_eth01.h
src/supla/network/html/: custom_sw_update.cpp  custom_sw_update.h  device_info.cpp  device_info.h  protocol_parameters.cpp  (+9 more)
src/supla/pv/: afore.cpp  afore.h  fronius.cpp  fronius.h  fronius3p.cpp  fronius3p.h  fronius3pmeter.cpp  fronius3pmeter.h  solaredge.cpp  solaredge.h
src/supla/sensor/: BME280.h  DHT.h  DS18B20.h  HC_SR04.cpp  HC_SR04.h  MAX6675_K.cpp  MAX6675_K.h  MAXThermocouple.cpp  MAXThermocouple.h  PzemV2.h  PzemV3.h  SHT3x.h  Si7021.h  Si7021_sonoff.cpp  Si7021_sonoff.h  binary.cpp  binary.h  distance.cpp  distance.h  electricity_meter.cpp  electricity_meter.h  esp_free_heap.h  general_purpose_measurement_base.h  hygro_meter.cpp  hygro_meter.h  impulse_counter.cpp  impulse_counter.h  normally_open.h  one_phase_electricity_meter.h  pressure.h  rain.h  therm_hygro_meter.cpp  therm_hygro_meter.h  therm_hygro_press_meter.cpp  therm_hygro_press_meter.h  thermometer.cpp  thermometer.h  three_phase_PzemV3.h  three_phase_PzemV3_ADDR.h  virtual_binary.cpp  (+5 more)
src/supla/storage/: config.cpp  config.h  eeprom.cpp  eeprom.h  fram_spi.h  key_value.cpp  key_value.h  littlefs_config.cpp  littlefs_config.h  storage.cpp  storage.h
(+276 files in other folders)
